--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="sketch1686920523783-01.jpeg" alt="Your Profile Picture" class="profile-picture">
-            <h1>rijoys</h1>
+            <img src="photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Samuvel v</h1>
             <p>i am a student</p>
         </div>
     </header>
@@ -169,14 +169,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="University of madras (2).pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="White Simple Student CV Resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2025 rijoys </p>
+        <p>&copy; 2025 Samuvel </p>
     </footer>
 
     <script>
